cabal-version:      3.0
name:               ib
version:            0.1.0.0
synopsis:           IRC Bot
homepage:           https://github.com/isaac025/ib
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Web
build-type:         Simple

executable ib
    ghc-options:      -Wall
    main-is:          Main.hs
    default-extensions:
        ImportQualifiedPost
    build-depends:    base ^>=4.17.2.0
                    , network
    hs-source-dirs:   src
    default-language: Haskell2010
